added projects layout

--- a/index.html
+++ b/index.html
@@ -26,5 +26,55 @@
         <img class="thirtyPercent" src="images/sailing-boat-5372833_1280.jpg" alt="">
         <img class="thirtyPercent" src="images/pexels-emre-kuzu-4503763.jpg" alt="">
     </main>
+
+
+    <section class="projects">
+        <figure class="noSpace">
+            <img src="images/womanPainting1.jpg" alt="web project for RexItInc" />
+        </figure>
+        <figure class="noSpace">
+          <img src="images/womanPainting1.jpg" alt="web project for The Dubliner" />
+        </figure>
+        <figure class="noSpace">
+          <img
+            src="images/womanPainting1.jpg"
+            alt="web project for Pilates website"
+          />
+        </figure>
+
+
+        <figure class="noSpace">
+          <img src="images/womanPainting1.jpg" alt="web project for RexItInc" />
+        </figure>
+        <figure class="noSpace">
+          <img src="images/womanPainting1.jpg" alt="web project for The Dubliner" />
+        </figure>
+        <figure class="noSpace">
+          <img
+            src="images/womanPainting1.jpg"
+            alt="web project for Pilates website"
+          />
+        </figure>
+      </section>
+
+
+
+
+
+
+
+
+    <section id="contact-form">
+
+        <img class="contact-form-half" src="images/IMG_20170810_200008124_HDR.jpg" alt="">
+        <form class="floatRight contact-form-half" id="post-form" action="js/main.js" method="post">
+            <input type="text" name="name" placeholder="Your Name"><br> 
+            <input type="email" name="email" placeholder="Your Email"><br>
+            <input type="message" name="msg" placeholder="Message"><br> 
+            <input type="submit" value="Submit">
+        </form>
+        <div class="clearFloat"></div>
+
+    </section>
 </body>
 </html>
