--- a/index.html
+++ b/index.html
@@ -60,20 +60,13 @@
 
 
 
-
-
-
-
     <section id="contact-form">
-
-        <img class="contact-form-half" src="images/IMG_20170810_200008124_HDR.jpg" alt="">
-        <form class="floatRight contact-form-half" id="post-form" action="js/main.js" method="post">
+        <form class="contact-form" id="post-form" action="js/main.js" method="post">
             <input type="text" name="name" placeholder="Your Name"><br> 
             <input type="email" name="email" placeholder="Your Email"><br>
             <input type="message" name="msg" placeholder="Message"><br> 
             <input type="submit" value="Submit">
         </form>
-        <div class="clearFloat"></div>
 
     </section>
 </body>
