--- a/pages/additionalProjects.html
+++ b/pages/additionalProjects.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Ashley Elowsky | Web Developer</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Ashley Elowsky | Additional Projects</title>
 </head>
 <body>
     <nav>
@@ -16,47 +16,37 @@
     </nav>
     <div class="clearFloat"></div>
     <header class="page-top">
-        <h1>You never know where the road may take you...</h1>
-
+        <h1>Additional Projects...</h1>
     </header>
 
-    <main>
-        <h2>But a Journey of Persistence, Inclusion, and Dedication... </h2>
-        <img class="thirtyPercent opacity" src="images/train-1728537_1280.jpg" alt="">
-        <img class="thirtyPercent" src="images/sailing-boat-5372833_1280.jpg" alt="">
-        <img class="thirtyPercent hiddenMobile" src="images/pexels-emre-kuzu-4503763.jpg" alt="">
-        <h2 class="loweredText">Can lead to a Story Worth Telling.</h2>
-    </main>
-
     <section class="projects" id="projects">
-        <figure> <img src="images/womanPainting1.jpg" alt="javaScript example"/> 
-            <a target="_blank" href="https://elowskya.github.io/javaScriptGames/pages/gridGenerator.html"> 
-                <h3>Javascript Example</h3>  </a>
-            <a target="_blank" href="https://www.youtube.com/watch?v=aQLAbcodzqA"> <h4>Youtube Tutorial</h4></a>
+        <figure> <img src="../images/womanPainting1.jpg" alt="restaurant project"/> 
+            <a target="_blank" href="https://immense-island-22576.herokuapp.com/contact.html"> 
+                <h3>Restaurant Project</h3>  </a>
         
         </figure>
 
         <figure> <a target="_blank" href="https://elowskya.github.io/dubSite/index.html">
-          <img src="images/womanPainting1.jpg" alt="web project for The Dubliner" />
+          <img src="../images/womanPainting1.jpg" alt="web project for The Dubliner" />
         <h3>Restaurant Website</h3>
         </a>
         </figure>
 
         <figure class="hiddenMobile"> <a target="_blank" href="https://elowskya.github.io/code-playground/">
-          <img src="images/womanPainting1.jpg"alt="web project for Pilates website"/>
+          <img src="../images/womanPainting1.jpg"alt="web project for Pilates website"/>
           <h3>Pilates Website</h3> </a>
         </figure>
 
         <figure> <a target="_blank" href="#"> <h4>C++ Banking Application</h4></a>
-          <img src="images/womanPainting1.jpg" alt="c++ banking application" />
+          <img src="../images/womanPainting1.jpg" alt="c++ banking application" />
         </figure>
 
         <figure class="hiddenMobile"> <a target="_blank" href="https://elowskya.github.io/jekyll-portfolio/"> <h4>Jekyll Blog Site</h4></a>
-          <img src="images/womanPainting1.jpg" alt="Jekyll blog site" />
+          <img src="../images/womanPainting1.jpg" alt="Jekyll blog site" />
         </figure>
 
         <figure class="hiddenMobile"> <a target="_blank" href="#"> <h4>And More Projects...</h4></a>
-          <img src="images/womanPainting1.jpg" alt="additional projects" />
+          <img src="../images/womanPainting1.jpg" alt="additional projects" />
         </figure>
       </section>
 
