--- a/pages/additionalProjects.html
+++ b/pages/additionalProjects.html
@@ -23,7 +23,7 @@
     <section class="wrapper">
         
         <section class="projects" id="projects">
-            <h2>Featured Projects</h2>
+            <h2>Additional Projects</h2>
             <p>Click on any of the projects below to learn more!</p>
             
             <figure>
