--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css"/>
-    <!-- <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" /> -->
     <title>Ashley Elowsky | Web Developer</title>
 </head>
 <body>
@@ -79,7 +78,7 @@
     </section>
     
     
-    <h2 class="floatLeft">Let's Connect</h2> 
+    <h2 class="floatLeft">Let's Chat!</h2> 
     <ul class="social hiddenMobile">
         <li><a href="https://github.com/elowskya" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a href="https://www.linkedin.com/in/ashleyelowsky/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
