links added to 404 to route back to index

--- a/404.html
+++ b/404.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <nav>
-        <span class="logo">Ashley Elowsky | Web Developer</span>
+        <span class="logo"><a href="index.html">Ashley Elowsky | Web Developer</a></span>
         <ul>
-            <li> <a href="#contact"> Get in Touch</a></li>
-            <li> <a href="#projects"> Projects</a></li>
+            <li> <a href="index.html">Get in Touch</a></li>
+            <li> <a href="index.html"> Projects</a></li>
         </ul>
     </nav>
     <div class="clearFloat"></div>
     <header class="page-top">
-        <h1>You never know where the road may take you...</h1>
+        <h1>Oops... try going back to the main page...</h1>
 
     </header>
     <section class="wrapper">
