--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="clearFloat"></div>
     <section class="contact-form-holder" id="contact">   
-        <form id="survey-form" action="https://formspree.io/f/xnqodrrl" method="POST">
+        <form id="survey-form" action="https://formspree.io/ashley.elowsky123@gmail.com" method="POST">
             <h2 id="title">Send a Note!</h2>
             
             <input type="text" name="name" id="_replyto" placeholder="Your Name" required>
