--- a/pages/additionalProjects.html
+++ b/pages/additionalProjects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <span class="logo"> <a href="../index.html">Ashley Elowsky | Web Developer</span>
+        <span class="logo"> <a href="../index.html">Ashley Elowsky | Web Developer</a></span>
         <ul>
             <li> <a href="#contact"> Get in Touch</a></li>
             <li> <a href="#projects"> Projects</a></li>
