--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <span class="logo">Ashley Elowsky | Web Developer</span>
         <ul>
+            <li> <a href="pages/resume.html">Resume</a></li>
             <li> <a href="#contact"> Get in Touch</a></li>
             <li> <a href="#projects"> Projects</a></li>
         </ul>
