--- a/pages/additionalProjects.html
+++ b/pages/additionalProjects.html
@@ -10,6 +10,7 @@
     <nav>
         <span class="logo"> <a href="../index.html">Ashley Elowsky | Web Developer</a></span>
         <ul>
+            <li><a href="resume.html">Resume</a></li>
             <li> <a href="#contact"> Get in Touch</a></li>
             <li> <a href="#projects"> Projects</a></li>
         </ul>
