--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             
             <input type="text" name="name" id="_replyto" placeholder="Your Name" required>
             <input type="email" name="email" id="email" placeholder="Your Email" required>
-            <a href="sms://616-439-1607‬">Text Us: </a>
+            <a href="sms:616-439-1607‬">Text Us: </a>
             <textarea name="message" id="textArea" cols="" rows="" placeholder="Comments..."></textarea>
             
             <button type="submit" id="submit">Send</button>
